Revert unwanted changes